<resources>
    <!-- basic -->
    <string name="app_name">Soundtastic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_play_midi">Media Player</string>

    <!-- Mixing Interface -->
    <string name="mixint_header">Mixing</string>
    <string name="mixint_bar">Start at bar</string>
    <string name="mixint_enabled">Enabled</string>
    <string name="mixint_copy">Copy</string>
    <string name="mixint_del">Delete</string>
    <string name="mixint_edit">Edit</string>
    <string name="mixint_rename">Rename</string>
    <string name="mixint_save">Save</string>
    <string name="mixint_emptytitle">Empty Title</string>
    <string name="mixint_newtitle">New:</string>
    <string name="mixint_oldtitle">Old:</string>

    <!-- settings_dialog.xml -->
    <string name="setdial_ticks_min">Ticks/Min:</string>
    <string name="setdial_apply_button_text">Apply</string>
    <string name="setdial_title">Title:</string>
    <string name="setdial_time">Time:</string>
    <string name="setdial_two_quarter">2/4</string>
    <string name="setdial_three_quarter">3/4</string>
    <string name="setdial_four_quarter">2/4</string>
    <string name="setdial_error_project_title">Please enter project name!</string>
    <string name="setdial_error_time_option">Please choose time!</string>

    <!-- GridView -->
    <string name="gridview_header">Edit Track</string>

    <!-- Record Interface -->
    <string name="recint_header">Record</string>

    <!-- gridView.java -->
    <string name="white">"WH"</string>
    <string name="green">"GR"</string>
    <string name="blue">"BL"</string>
    <string name="yellow">"YE"</string>


</resources>
