<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView android:text="@string/setdial_ticks_min"
        android:id="@+id/ticks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signature"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp" />

    <TextView android:text="@string/min_bpm_string"
        android:id="@+id/beats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ticks"
        android:layout_below="@+id/signature"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BPMseekBar"
        android:layout_below="@+id/signature"
        android:layout_marginTop="9dp"
        android:max="50"
        android:layout_toRightOf="@id/beats"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <Button android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setdial_apply_button_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setdial_title"
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setdial_time"
        android:id="@+id/signature"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15dp"
        android:hint="ProjectName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/signature"
        android:layout_toEndOf="@+id/signature"
        android:layout_toRightOf="@+id/signature"
        android:layout_alignBottom="@+id/signature"
        android:id="@+id/radioGroup"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setdial_two_quarter"
            android:id="@+id/twoquarter"
            android:checked="false" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setdial_three_quarter"
            android:id="@+id/threequarter"
            android:checked="false" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setdial_four_quarter"
            android:id="@+id/fourquarter"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorMessage"
        android:layout_below="@+id/ticks"
        android:layout_alignLeft="@+id/ticks"
        android:layout_alignStart="@+id/ticks"
        android:layout_alignTop="@+id/Button01"
        android:autoText="false"
        android:text=""
        android:textColor="#ffff0000" />
</RelativeLayout>